completely drop the pre-PEP8 methods in pyparsing 4.0, though we won't see that release
until some time in 2025. So there is plenty of time to convert existing parsers to
the new function names before the old functions are completely removed. (Big help from
Devin J. Pohly in structuring the code to enable this peaceful transition.)


Version 3.2.1 - in development
------------------------------
- Simplified railroad diagrams emitted for parsers using `infix_notation`, by hiding
  lookahead terms. Updated `lox_parser.py` example and added `lox_parser_diagram.html`
  diagram file.

- Improved performance of `cpp_style_comment`, `c_style_comment`, `common.fnumber`
  and `common.ieee_float` Regex expressions. PRs submitted by Gabriel Gerlero,
  nice work, thanks!

- Add missing type annotations to `match_only_at_col`, `replace_with`, `remove_quotes`,
  `with_attribute`, and `with_class`. Issue #585 reported by rafrafrek.


Version 3.2.0 - October, 2024
-------------------------------
- Discontinued support for Python 3.6, 3.7, and 3.8. Adopted new Python features from
  Python versions 3.7-3.9:
  - Updated type annotations to use built-in container types instead of names
    imported from the `typing` module (e.g., `list[str]` vs `List[str]`).
  - Reworked portions of the packrat cache to leverage insertion-preserving ordering
    in dicts (including removal of uses of `OrderedDict`).
  - Changed `pdb.set_trace()` call in `ParserElement.set_break()` to `breakpoint()`.
  - Converted `typing.NamedTuple` to `dataclasses.dataclass` in railroad diagramming
    code.
  - Added `from __future__ import annotations` to clean up some type annotations.
  (with assistance from ISyncWithFoo, issue #535, thanks for the help!)

- POSSIBLE BREAKING CHANGES

    The following bugfixes may result in subtle changes in the results returned or
    exceptions raised by pyparsing.

    - Fixed code in `ParseElementEnhance` subclasses that